# game-of-life

./: .gitignore  CMakeLists.txt  README.md  main.cpp
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
res/: quad.frag  quad.vert
src/: application.cpp  application.h  main.cpp
src/graphics/: camera.cpp  camera.h  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  screen_settings.cpp  screen_settings.h  shader.cpp  shader.h
